Bug 159108 - B3 should die sooner if a Value has the wrong number of children
Summary: B3 should die sooner if a Value has the wrong number of children
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-24 16:42 PDT by Filip Pizlo
Modified: 2016-06-24 17:04 PDT (History)
5 users (show)

See Also:


Attachments
the patch (7.22 KB, patch)
2016-06-24 16:46 PDT, Filip Pizlo
mark.lam: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2016-06-24 16:42:42 PDT
Patch forthcoming.
Comment 1 Filip Pizlo 2016-06-24 16:46:05 PDT
Created attachment 282031 [details]
the patch
Comment 2 WebKit Commit Bot 2016-06-24 16:48:08 PDT
Attachment 282031 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/b3/B3Value.h:373:  Wrong number of spaces before statement. (expected: 12)  [whitespace/indent] [4]
ERROR: Source/JavaScriptCore/b3/B3Value.h:379:  Wrong number of spaces before statement. (expected: 12)  [whitespace/indent] [4]
ERROR: Source/JavaScriptCore/b3/B3Value.h:385:  Wrong number of spaces before statement. (expected: 12)  [whitespace/indent] [4]
ERROR: Source/JavaScriptCore/b3/B3Value.h:391:  Wrong number of spaces before statement. (expected: 12)  [whitespace/indent] [4]
ERROR: Source/JavaScriptCore/b3/B3Value.h:397:  Wrong number of spaces before statement. (expected: 12)  [whitespace/indent] [4]
Total errors found: 5 in 4 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Mark Lam 2016-06-24 16:50:36 PDT
Comment on attachment 282031 [details]
the patch

r=me
Comment 4 Filip Pizlo 2016-06-24 17:04:30 PDT
Landed in https://trac.webkit.org/changeset/202463